syntax = "proto3";

package mes;

message Customer {
    string LoginCustomer = 1;
    string PasswortCustomer = 2;
}

message Warehouse {
    string LoginWarehouse = 1;
    string PasswortWarehouse = 2;
}

message Vendor {
    string LoginVendor = 1;
    string PasswortVendor = 2;
}

message Goods {
    string NameGoods = 1;
    string TypeGoods = 2;
}

message VendorPrice {
    Vendor VendorInfo = 1;
    string NameGoods = 2;
    string PriceGoods = 3;
}
